--- a/cv/index.html.erb
+++ b/cv/index.html.erb
@@ -53,7 +53,7 @@
       <gig-img><img src="assets/ist.jpg"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Student</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i>Instituto Superior Técnico (IST)</h4>
+        <h4><i class="fas fa-map-marker-alt"></i>Instituto Superior Técnico (IST)</h4>
         <h4><i class="fas fa-clock"></i>Sep. '15 to Jun. '19</h4>
       </gig-info>
     </gig-header>
@@ -70,7 +70,7 @@
       <gig-img><img src="assets/am.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Software Engineer</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://amplemarket.com">Amplemarket</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://amplemarket.com">Amplemarket</a></h4>
         <h4><i class="fas fa-clock"></i>Mar '23 to present</h4>
       </gig-info>
     </gig-header>
@@ -85,7 +85,7 @@
       <gig-img><img src="assets/cf.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Software Engineer</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office">Celfocus - Unified Communications - One Net</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office">Celfocus - Unified Communications - One Net</a></h4>
         <h4><i class="fas fa-clock"></i>Aug. '19 to Feb '23</h4>
       </gig-info>
     </gig-header>
@@ -100,7 +100,7 @@
       <gig-img><img src="assets/cms.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Summer Internship</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
         <h4><i class="fas fa-clock"></i>Jun. '19 to Jul. '19</h4>
       </gig-info>
     </gig-header>
@@ -115,7 +115,7 @@
       <gig-img><img src="assets/fst.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Fulltime</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="http://fst.tecnico.ulisboa.pt/">FST Lisboa</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="http://fst.tecnico.ulisboa.pt/">FST Lisboa</a></h4>
         <h4><i class="fas fa-clock"></i>Sep. '17 to Jan. '18</h4>
       </gig-info>
     </gig-header>
@@ -129,7 +129,7 @@
       <gig-img><img src="assets/hs.png"></gig-img>
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Member</h4>
-        <h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://hackerschool.io/">HackerSchool</a></h4>
+        <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://hackerschool.io/">HackerSchool</a></h4>
         <h4><i class="fas fa-clock"></i>May '16 to Sep. '17</h4>
       </gig-info>
     </gig-header>
