--- a/what-i-read.html.erb
+++ b/what-i-read.html.erb
@@ -3,7 +3,7 @@
 <head>
   <%= File.read('partials/head.html') %>
   <%= File.read('partials/article-head.html') %>
-  <% file = File.new("../posts/what-i-read.txt") %>
+  <% file = File.new("posts/what-i-read.txt") %>
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
   <meta property="article:published_time" content="<%= file.mtime.iso8601 %>" />
   <meta property="article:modified_time" content="<%= file.mtime.iso8601 %>" />
