--- a/cv/index.html.erb
+++ b/cv/index.html.erb
@@ -77,7 +77,7 @@
       </gig-info>
     </gig-header>
     <gig-description>
-      <p><b>Tech:</b> Ruby on Rails, Sidekiq, TypeScript, React; PostgreSQL (&amp; TimescaleDB), ElasticSearch, Kafka</p>
+      <p><b>Tech:</b> Ruby on Rails, Sidekiq, TypeScript, React; PostgreSQL (&amp; TimescaleDB), Redis, ElasticSearch, Kafka, k8s, GCloud</p>
       <p></p>
     </gig-description>
   </gig>
