--- a/index.html.erb
+++ b/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <%= File.read('partials/head.html') %>
+  <%== File.read('partials/head.html') %>
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
   <meta property="og:description" content="Personal homepage of João Pinheiro" />
@@ -13,7 +13,7 @@
   <meta property="profile:username" content="pineman" />
   <meta property="profile:gender" content="male" />
 </head>
-<%= File.read('partials/pinecone.html') %>
+<%== File.read('partials/pinecone.html') %>
 <body>
 <div id="wrap">
 <header id="index-header">
