--- a/what-i-read.html.erb
+++ b/what-i-read.html.erb
@@ -3,6 +3,7 @@
 <head>
   <%== File.read('partials/head.html') %>
   <%== File.read('partials/article-head.html') %>
+  <% system("sed -i 's|\\?utm_source=substack&utm_medium=email||g' posts/what-i-read.txt") %>
   <% file = File.new("posts/what-i-read.txt") %>
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
   <meta property="article:published_time" content="<%= file.mtime.iso8601 %>" />
