--- a/partials/head.html
+++ b/partials/head.html
@@ -6,3 +6,4 @@
 <meta name="keywords" content="technology computer software engineering" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="João Pinheiro" />
+<script src="https://kit.fontawesome.com/84407ba8ee.js" crossorigin="anonymous"></script>
