--- a/what-i-read.html.erb
+++ b/what-i-read.html.erb
@@ -18,7 +18,9 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>Some of what I read on the internets</h1>
-  <i class="fa-brands fa-goodreads"></i>
+  <div class="icon-container">
+    <i class="fa-brands fa-goodreads"></i>
+  </div>
   <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">Goodreads</a>
 <% file.readlines.each do |l| %>
   <% l.strip! %>
