--- a/style.css
+++ b/style.css
@@ -43,6 +43,24 @@ i {
   padding-right: 0.5rem;
 }
 
+.icon-container {
+  display: inline-block;
+  width: 0.8em;
+  height: 0.8em;
+  vertical-align: middle;
+  margin-right: 0.3em;
+}
+
+.icon-container i {
+  font-size: 1em;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 0;
+}
+
 .index-post-time {
   min-width: 5.7rem;
   display: inline-block;
