initial projects page

--- a/index.html.erb
+++ b/index.html.erb
@@ -69,6 +69,7 @@
     <% end %>
   </ul>
   <h2 style="margin: 0.5em 0;"><a href="what-i-read.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
+  <h2 style="margin: 0.5em 0;"><a href="projects.html"><div class="icon-container"><i class="fa-solid fa-layer-group"></i></div>Projects</a></h2>
   <a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
   <a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>
 </article>
