--- a/what-i-read.html.erb
+++ b/what-i-read.html.erb
@@ -3,8 +3,15 @@
 <head>
   <%== File.read('partials/head.html') %>
   <%== File.read('partials/article-head.html') %>
-  <% system("sed -i 's|\\?utm_source=substack&utm_medium=email||g' posts/what-i-read.txt") %>
-  <% file = File.new("posts/what-i-read.txt") %>
+  <%
+    FILENAME = "posts/what-i-read.txt"
+    content = File.read(FILENAME)
+    if content.include?("?utm_source=substack&utm_medium=email")
+      puts "Removing Substack link"
+      File.write(FILENAME, content.gsub(/\?utm_source=substack&utm_medium=email/, ""))
+    end
+    file = File.new(FILENAME)
+  %>
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
   <meta property="article:published_time" content="<%= file.mtime.iso8601 %>" />
   <meta property="article:modified_time" content="<%= file.mtime.iso8601 %>" />
