--- a/post.html.erb
+++ b/post.html.erb
@@ -14,6 +14,13 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="<%= post.title %>" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@pineman_">
+  <meta name="twitter:creator" content="@pineman_">
+  <meta name="twitter:title" content="<%= post.title %>">
+  <meta name="twitter:description" content="<%= post.text_descr %>">
+  <meta name="twitter:image" content="https://pineman.github.io/assets/link_previews/<%= post.title_hash %>.webp">
+  <meta name="twitter:image:alt" content="<%= post.title %>">
   <style>
     .heading-link {
       opacity: 0;
