--- a/index.html.erb
+++ b/index.html.erb
@@ -70,7 +70,8 @@
     <% end %>
   </ul>
   <h2 style="margin: 0.5em 0;"><a href="what-i-read.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
-  <h2 style="margin: 0.5em 0;"><div class="icon-container" style="margin-top: -4px;"><i class="fa-solid fa-layer-group"></i></div>Projects</h2>
+  <details>
+    <summary style="margin: 0.5em 0; font-size: 1.5em; font-weight: bold;"><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</summary>
     <ul>
       <li><a href="https://github.com/pineman/fpt">fpt - Gameboy emulator</a> (rust)</li>
       <li><a href="https://github.com/pineman/su">Sudoku browser game</a> (ruby)</li>
@@ -86,6 +87,7 @@
       <li><a href="https://github.com/pineman/blackjack">Blackjack game</a> (C, SDL2)</li>
       <li><a href="https://github.com/pineman/wordmorph">Shortest paths between words</a> (C)</li>
     </ul>
+  </details>
   <a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
   <a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>
 </article>
