--- a/post.html.erb
+++ b/post.html.erb
@@ -10,7 +10,7 @@
   <meta property="og:title" content="<%= post.title %>" />
   <meta name="description" content="<%= post.text_descr %>" />
   <meta property="og:description" content="<%= post.text_descr %>" />
-  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/<%= post.title_hash %>.webp" />
+  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/<%= post.title_hash %>.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="<%= post.title %>" />
@@ -19,7 +19,7 @@
   <meta name="twitter:creator" content="@pineman_">
   <meta name="twitter:title" content="<%= post.title %>">
   <meta name="twitter:description" content="<%= post.text_descr %>">
-  <meta name="twitter:image" content="https://pineman.github.io/assets/link_previews/<%= post.title_hash %>.webp">
+  <meta name="twitter:image" content="https://pineman.github.io/assets/link_previews/<%= post.title_hash %>.png">
   <meta name="twitter:image:alt" content="<%= post.title %>">
   <style>
     .heading-link {
