--- a/style.css
+++ b/style.css
@@ -20,20 +20,30 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: fit-content;
+  }
 
+  #index-header-text-text {
+    padding-left: 1.5em;
+    width: fit-content;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
     h1 {
       margin: 0;
-      text-align: center;
       font-weight: normal;
+      width: fit-content;
     }
-
     span {
-      display: block;
-      text-align: center;
       margin-top: -0.5rem;
+      align-self: center;
     }
+  }
 
-    ul {
+  #index-header-text-links {
+      margin: 0;
+      padding: 0;
+      padding-left: 1.5em;
       list-style-type: none;
     }
   }
@@ -162,6 +172,13 @@ a {
 
     img {
       margin: auto auto 0.7rem;
+    }
+
+    #index-header-text {
+      width: auto;
+      #index-header-text-text {
+        padding-left: 0;
+      }
     }
 
     ul {
