--- a/index.html.erb
+++ b/index.html.erb
@@ -23,7 +23,7 @@
   </div>
   <div id="index-header-text">
     <div id="index-header-text-text">
-      <h1>Hi! I'm pineman</h1>
+      <h1>Hi! I'm pineman 👋</h1>
       <span>and I like computers</span>
     </div>
     <ul id="index-header-text-links">
@@ -62,7 +62,7 @@
 </header>
 <article>
   <p>Hi! My name is João Pinheiro (aka pineman), I'm from Lisbon, Portugal and I like computers. I started programming when I was <span title="<%= Helpers.years_ago("2014-02-01") %> years ago">16</span> with Python and I've loved software ever since. Currently at <a href="https://www.amplemarket.com/">amplemarket</a>!</p>
-  <h2 style="margin: 0.5em 0;"><a href="atom.xml"><div class="icon-container"><i class="fa-solid fa-square-rss"></i></div>Blog</a></h2>
+  <h2><a href="atom.xml"><div class="icon-container"><i class="fa-solid fa-square-rss"></i></div>Blog</a></h2>
   <ul>
     <% posts.sort_by(&:date).reverse.each do |post| %>
       <li>
@@ -71,9 +71,9 @@
       </li>
     <% end %>
   </ul>
-  <h2 style="margin: 0.5em 0;"><a href="what-i-read.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
+  <h2><a href="what-i-read.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
   <details>
-    <summary style="margin: 0.5em 0; font-size: 1.5em; font-weight: bold;"><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</summary>
+    <summary><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</summary>
     <ul>
       <li><a href="https://github.com/pineman/fpt">fpt - Gameboy emulator</a> (rust)</li>
       <li><a href="https://github.com/pineman/su">Sudoku browser game</a> (ruby)</li>
