--- a/index.html.erb
+++ b/index.html.erb
@@ -23,7 +23,7 @@
   </div>
   <div id="index-header-text">
     <div id="index-header-text-text">
-      <h1>Hi! I'm pineman 👋</h1>
+      <h1>Hi! I'm pineman</h1>
       <span>and I like computers</span>
     </div>
     <ul id="index-header-text-links">
