--- a/cv/index.html.erb
+++ b/cv/index.html.erb
@@ -22,20 +22,20 @@
         dob, today = Date.new(1997, 3, 29), Date.today
         today.year - dob.year - ((today.month < dob.month || today.month == dob.month && today.day < dob.day) ? 1 : 0)
       %></li>
-      <li><i class="fas fa-map-marker-alt"></i>Lisbon, Portugal</li>
+      <li><i class="fas fa-map-marker-alt"></i>Porto, Portugal</li>
       <li><i class="fa fa-envelope"></i><a target="_blank" href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro@gmail.com</a></li>
       <li><i class="fas fa-phone"></i><a target="_blank" href="tel:+351968818031">+351 968 818 031</a></li>
       <li><i class="fab fa-linkedin"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">LinkedIn</a></li>
       <li><i class="fab fa-github"></i><a target="_blank" href="https://github.com/pineman">GitHub</a></li>
-      <li><i class="fa-brands fa-goodreads"></i><a target="_blank" href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer">Goodreads</a></li>
       <li><i class="fas fa-globe"></i><a target="_blank" href="https://pineman.github.io">Website</a></li>
+      <li><i class="fa-brands fa-goodreads"></i><a target="_blank" href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer">Goodreads</a></li>
     </ul>
     <hr />
     <h3>Interests</h3>
-      High Load, Performance Optimization, Distributed Systems, Reliability
+      Performance optimization, Databases, Distributed Systems, Reliability
     <hr />
     <h3>Projects</h3>
-    <a target="_blank" href="https://pineman.github.io/fpt/">gameboy emulator</a>, <a target="_blank" href="https://su.fly.dev">sudoku</a>, <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/LEDmatrix">LED Matrix</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <!--<a target="_blank" href="https://github.com/pineman/pineman.github.io">blog</a>-->
+    <a target="_blank" href="https://pineman.github.io/fpt/">gameboy emulator</a>, <a target="_blank" href="https://su.fly.dev">sudoku</a>, <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/LEDmatrix">LED Matrix</a>, <a target="_blank" href="https://github.com/pineman/aoc">aoc</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>
     <!--
     <hr />
     <h3>Technologies</h3>
@@ -48,23 +48,6 @@
 </aside>
 
 <article>
-  <education>
-  <h2>Education</h2>
-  <gig>
-    <gig-header>
-      <gig-img><img src="assets/ist.jpg"></gig-img>
-      <gig-info>
-        <h4><i class="fas fa-briefcase"></i>Student</h4>
-        <h4><i class="fas fa-map-marker-alt"></i>Instituto Superior Técnico (IST)</h4>
-        <h4><i class="fas fa-clock"></i>Sep. '15 to Jun. '19</h4>
-      </gig-info>
-    </gig-header>
-    <gig-description>
-      <p>Electrical and Computer Engineering.</p>
-    </gig-description>
-  </gig>
-  </education>
-  <hr />
   <experience>
   <h2 id="experience">Experience</h2>
   <gig>
@@ -73,12 +56,12 @@
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Software Engineer</h4>
         <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://amplemarket.com">Amplemarket</a></h4>
-        <h4><i class="fas fa-clock"></i>Mar '23 to present</h4>
+        <h4><i class="fas fa-clock"></i>Mar '23 - present</h4>
       </gig-info>
     </gig-header>
     <gig-description>
-      <p><b>Tech:</b> Ruby on Rails, Sidekiq, TypeScript, React; PostgreSQL (&amp; TimescaleDB), Redis, ElasticSearch, Kafka, k8s, GCloud</p>
-      <p></p>
+      <p style="font-size: 0.9em"><b>Tech:</b> Ruby on Rails, Sidekiq, TypeScript, React; PostgreSQL (&amp; TimescaleDB), Redis, ElasticSearch, Kafka, k8s, GCloud</p>
+      <p>Series A B2B SaaS startup in Sales. I was part of the initial analytics pipeline effort, using TimescaleDB (ELT), dbt and cube.js. <a href='https://www.amplemarket.com/blog/introducing-lists'>Overhauled Lead Lists</a>. Setup SMTP verification servers. Reverse engineered JavaScript code. Wrote a service called 150 times/s at peak. <a href='https://pineman.github.io/2025-02-01_k8s-dns.html'>Three</a> <a href='https://pineman.github.io/2024-05-25_just-use-curl.html'>blog</a> <a href='https://pineman.github.io/2023-11-05_ruby-ascii-8bit.html'>posts</a>. Lots of bug investigations and fixes. Many query plans.</p>
     </gig-description>
   </gig>
   <hr />
@@ -88,12 +71,12 @@
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Software Engineer</h4>
         <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office">Celfocus - Unified Communications - One Net</a></h4>
-        <h4><i class="fas fa-clock"></i>Aug. '19 to Feb '23</h4>
+        <h4><i class="fas fa-clock"></i>Aug. '19 - Feb '23</h4>
       </gig-info>
     </gig-header>
     <gig-description>
-      <p><b>Tech:</b> Java (JBoss, Spring, Hibernate), React, PostgreSQL, ActiveMQ; Docker, Bash, Gitlab CI (K8s on GCloud), Helm, Terraform</p>
-      <p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) is a 190k SLOC C++ backend with an in-memory DB (no ORM). It speaks telco protocols (SS7 and SIP) and so has strict SLAs. Its database is provisioned via a web app written in React and Java. It provides a JSON REST API and integrates with many external systems. I started as a CHS dev and later shifted to the web app's backend (rarely frontend). I spearheaded new features, refactorings, migrations with external teams, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, new architecture needs and onboarding.</p>
+      <p style="font-size: 0.9em"><b>Tech:</b> Java (JBoss, Spring, Hibernate), React, PostgreSQL, ActiveMQ; Docker, Bash, Gitlab CI (K8s on GCloud), Helm, Terraform</p>
+      <p><a href='https://www.celfocus.com/offers-solutions/products/one-net'>One Net</a> is Celfocus's enterprise voice solution with 5 international deployments. The Call Handling Server (CHS) is a 190k SLOC C++ backend with an in-memory DB (no ORM). It speaks telco protocols (SS7 and SIP) and so has strict SLAs. Its database is provisioned via a web app written in React and Java. I did both CHS and backend development (rarely frontend): new features, refactorings, failover in production and new architecture needs.</p>
     </gig-description>
   </gig>
   <hr />
@@ -101,13 +84,30 @@
     <gig-header>
       <gig-img><img src="assets/cms.png"></gig-img>
       <gig-info>
-        <h4><i class="fas fa-briefcase"></i>Summer Internship</h4>
+        <h4><i class="fas fa-briefcase"></i>Summer Intern</h4>
         <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
-        <h4><i class="fas fa-clock"></i>Jun. '19 to Jul. '19</h4>
+        <h4><i class="fas fa-clock"></i>Jun. '19 - Jul. '19</h4>
       </gig-info>
     </gig-header>
     <gig-description>
-      <p><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov/commits/master?author=joao.pinheiro@caixamagica.pt">Open Source development</a> in C, C++, Qt Quick/QML.</p>
+      <p>Open Source development in C, C++, Qt Quick/QML.</p>
+    </gig-description>
+  </gig>
+  </experience>
+  <hr />
+  <education>
+  <h2>Education</h2>
+  <gig>
+    <gig-header>
+      <gig-img><img src="assets/ist.jpg"></gig-img>
+      <gig-info>
+        <h4><i class="fas fa-briefcase"></i>Student</h4>
+        <h4><i class="fas fa-map-marker-alt"></i>Instituto Superior Técnico (IST)</h4>
+        <h4><i class="fas fa-clock"></i>Sep. '15 - Jun. '19</h4>
+      </gig-info>
+    </gig-header>
+    <gig-description>
+      <p>Electrical and Computer Engineering.</p>
     </gig-description>
   </gig>
   <hr />
@@ -116,13 +116,13 @@
     <gig-header>
       <gig-img><img src="assets/fst.png"></gig-img>
       <gig-info>
-        <h4><i class="fas fa-briefcase"></i>Fulltime</h4>
+        <h4><i class="fas fa-briefcase"></i>Temp Member</h4>
         <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="http://fst.tecnico.ulisboa.pt/">FST Lisboa</a></h4>
-        <h4><i class="fas fa-clock"></i>Sep. '17 to Jan. '18</h4>
+        <h4><i class="fas fa-clock"></i>Sep. '17 - Jan. '18</h4>
       </gig-info>
     </gig-header>
     <gig-description>
-      <p>In Formula Student teams build, test and race a formula style car. I programmed PIC μCs and reduced the dev loop to one keypress. Worked on a GUI (C++/Qt) &amp; ported it to windows. I loved the passion and dedication of the team.</p>
+      <p>Student race car team. I programmed PIC μCs and reduced the dev loop to one keypress. Worked on a GUI (C++/Qt) &amp; ported it to windows. I loved the passion and dedication of the team.</p>
     </gig-description>
   </gig>
   <hr />
@@ -132,15 +132,15 @@
       <gig-info>
         <h4><i class="fas fa-briefcase"></i>Member</h4>
         <h4><i class="fas fa-map-marker-alt"></i><a target="_blank" href="https://hackerschool.io/">HackerSchool</a></h4>
-        <h4><i class="fas fa-clock"></i>May '16 to Sep. '17</h4>
+        <h4><i class="fas fa-clock"></i>May '16 - Sep. '17</h4>
       </gig-info>
     </gig-header>
     <gig-description>
-      <p>HackerSchool is a student society that promoted the Hacker spirit. I codeveloped a <a target="_blank" href="https://github.com/hackerschool/r2p">pair of GUI apps in C++/Qt</a> and an <a target="_blank" href="https://github.com/hackerschool/ledmatrix">LED Matrix</a> in Python and Arduino. I also organized events at IST: <a target="_blank" href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016">a workshop for younger students</a>, hackathons and <a target="_blank" href="https://tecnico.ulisboa.pt/en/events/secthon-security-hackathon/">CTFs</a>.</p>
+      <p>Student society that promotes the Hacker spirit. I codeveloped a <a target="_blank" href="https://github.com/hackerschool/r2p">pair of GUI apps in C++/Qt</a> and an <a target="_blank" href="https://github.com/hackerschool/ledmatrix">LED Matrix</a> in Python and Arduino. Organized events at IST: <a target="_blank" href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016">a workshop for younger students</a>, hackathons and <a target="_blank" href="https://tecnico.ulisboa.pt/en/events/secthon-security-hackathon/">CTFs</a>.</p>
     </gig-description>
   </gig>
   </side-by-side-wrap>
-  </experience>
+  </education>
 </article>
 </body>
 </html>
