--- a/cv/style.css
+++ b/cv/style.css
@@ -124,7 +124,7 @@ article {
   flex-direction: column;
   justify-content: space-evenly;
 }
-#experience {
+#education {
   margin-top: -0.5rem;
 }
 article hr {
