--- a/index.html.erb
+++ b/index.html.erb
@@ -81,7 +81,7 @@
       <li><a href="https://github.com/pineman/LEDmatrix">LED matrix</a> (python)</li>
       <li><a href="https://github.com/pineman/r2p">r2p - Play remote games (via RDP) on a Raspberry Pi</a> (C++, Qt)</li>
       <li><a href="https://github.com/pineman/aoc">Advent of Code solutions</a></li>
-      <li><a href="https://github.com/pineman/code">Everything else - experiments, old projects, challenges</a></li>
+      <li><a href="https://github.com/pineman/code">Everything else - challenges, old projects, experiments</a></li>
     </ul>
     Academic selection:
     <ul>
