--- a/post.html.erb
+++ b/post.html.erb
@@ -3,6 +3,7 @@
 <head>
   <%== File.read('partials/head.html') %>
   <%== File.read('partials/article-head.html') %>
+  <link rel="alternate" type="text/markdown" href="posts/<%= post.filename %>.md">
   <meta property="og:url" content="https://pineman.github.io/<%= post.url %>" />
   <meta property="article:published_time" content="<%= post.date.iso8601 %>" />
   <meta property="article:modified_time" content="<%= post.date.iso8601 %>" />
