--- a/index.html.erb
+++ b/index.html.erb
@@ -72,16 +72,16 @@
     <% end %>
   </ul>
   <h2><a href="what-i-read.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
-  <details>
-    <summary><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</summary>
-    <ul>
-      <li><a href="https://github.com/pineman/fpt">fpt - Gameboy emulator</a> (rust)</li>
-      <li><a href="https://github.com/pineman/su">Sudoku browser game</a> (ruby)</li>
-      <li><a href="https://github.com/pineman/abra">abra - Typing speed game</a> (js)</li>
-      <li><a href="https://github.com/pineman/LEDmatrix">LED matrix</a> (python)</li>
-      <li><a href="https://github.com/pineman/r2p">r2p - Play remote games (via RDP) on a Raspberry Pi</a> (C++, Qt)</li>
-      <li><a href="https://github.com/pineman/aoc">Advent of Code solutions</a></li>
-      <li><a href="https://github.com/pineman/code">Everything else - challenges, old projects, experiments</a></li>
+  <details style="margin-top: -0.5em;">
+    <summary><h2 style="display: inline-block;"><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</h2></summary>
+    <ul style="margin-top: 0;">
+      <li><a href="https://github.com/pineman/fpt">fpt</a> - Gameboy emulator (rust)</li>
+      <li><a href="https://github.com/pineman/su">su</a> - Sudoku browser game (ruby)</li>
+      <li><a href="https://github.com/pineman/abra">abra</a> - Typing speed game (js)</li>
+      <li><a href="https://github.com/pineman/LEDmatrix">LEDmatrix</a> - A 20 * 10 pixel LED matrix (python)</li>
+      <li><a href="https://github.com/pineman/r2p">r2p</a> - Play remote games via RDP on a Raspberry Pi (C++, Qt)</li>
+      <li><a href="https://github.com/pineman/aoc">aoc</a> - Advent of Code solutions</li>
+      <li><a href="https://github.com/pineman/code">code</a> - Everything else - challenges, old projects, experiments</li>
     </ul>
     Academic selection:
     <ul>
