--- a/index.html.erb
+++ b/index.html.erb
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
   <%== File.read('partials/head.html') %>
+  <link rel="alternate" type="text/markdown" href="index.md">
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
   <meta property="og:description" content="Personal homepage of João Pinheiro" />
